Desktop user manager: Fix spacing between deletion warning text and button for supervised users.
This fixes an oversight from https://codereview.chromium.org/307483002.

"Before" screenshot: https://drive.google.com/a/google.com/file/d/0BxTU2YPRG-lRNl9FRy1KQ2c2dEU/view?usp=sharing
Mock: https://folio.googleplex.com/chrome-ux/mocks/064-chrome-away-from-chrome/supervised-users/mirror#%2FPlaypen_210514_mirror-11.png

BUG=310640

Review URL: https://codereview.chromium.org/443033003

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@287828 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 8ce866dc6b9bec94f1fcf4ab47aa92321d03c82a

--- a/ui/login/account_picker/user_pod_row.css
+++ b/ui/login/account_picker/user_pod_row.css
@@ -383,7 +383,8 @@ html[dir=rtl] .action-box-area.active ~ .action-box-menu {
   padding: 20px;
 }
 
-.action-box-remove-user-warning-text {
+.action-box-remove-user-warning-text,
+.action-box-remove-supervised-user-warning-text {
   padding-bottom: 20px;
 }
 
